update for edmond data

--- a/axa_ae_gcn_lstm.ipynb
+++ b/axa_ae_gcn_lstm.ipynb
@@ -3,16 +3,6 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/dcolinmorgan/AXA_AE_app/blob/main/axa_ae_gcn_lstm.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "id": "4w6yuGrb914f"
       },
       "source": [
@@ -1106,6 +1096,15 @@
     },
     {
       "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "99WsjrLQrmUf"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
       "source": [
         "## this is to predict unrelated age from pollution -- of course it doesnt work -- hopefully good prevalence data will work better!"
       ],
@@ -1119,8 +1118,7 @@
   "metadata": {
     "colab": {
       "collapsed_sections": [],
-      "provenance": [],
-      "include_colab_link": true
+      "provenance": []
     },
     "kernelspec": {
       "display_name": "Python 3",
